apps/kubernetes-dashboard/networkpolicies/traefik-egress-kubernetes-dashboard.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: traefik-egress-kubernetes-dashboard
  namespace: traefik
spec:
  selector: app.kubernetes.io/instance == 'traefik'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        namespaceSelector: projectcalico.org/name == 'kubernetes-dashboard'
        selector: app.kubernetes.io/instance == 'kubernetes-dashboard'
        ports:
          - 8443
